Java Servlet: autenticação, autorização e o padrão MVC Java Servlet: autenticação, autorização e o padrão MVC
Implementando o logout

--- a/gerenciador/WebContent/WEB-INF/view/formEmpresa.html
+++ b/gerenciador/WebContent/WEB-INF/view/formEmpresa.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	
+	<c:import url="Logout-parcial.jsp"/>
 	<form action="/gerenciador/novaEmpresa" method= "post">
 	
 		Nome: <input type="text" name="nome"/>
